@@ -59,21 +59,21 @@ ASM_Phase_e gASM_Phase = eStartup;
 static bool
 ASM_NextLine (void)
 {
-  const char *curFile = FS_GetCurFileName ();
-  int curLine = FS_GetCurLineNumber ();
-  while (!Input_NextLine (eVarSubst))
+  while (gCurPObjP != NULL)
     {
+      const char *curFile = FS_GetCurFileName ();
+      int curLine = FS_GetCurLineNumber ();
+
+      if (Input_NextLine (eVarSubst))
+	return true;
+
       /* Failed to read a line, this might be we're EOD for the current
          parsable object.  Go up one.  */
       if (gCurPObjP->type == POType_eFile)
 	errorLine (curFile, curLine, ErrorWarning, "No END found");
       FS_PopPObject (false);
-      if (gCurPObjP == NULL)
-	return false;
-      curFile = FS_GetCurFileName ();
-      curLine = FS_GetCurLineNumber ();
     }
-  return true;
+  return false;
 }
 
 static void
@@ -87,7 +87,7 @@ ASM_DoPass (const char *asmFile)
     {
       asmContinueValid = true;
 
-      while (gCurPObjP != NULL && ASM_NextLine ())
+      while (ASM_NextLine ())
 	{
 	  /* Ignore blank lines and comments.  */
 	  if (Input_IsEolOrCommentStart ())
